# wizardai-sdk

./: README.md  conversation.py  exceptions.py  plugins.py  pyproject.toml  setup.py  vision.py  wizardai.py
.github/workflows/: publish.yml
wizardai/: utils.py
