[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wizardai-sdk"
version = "2.1.0"
description = "All-in-one AI SDK for conversational AI, vision, and speech powered by Sagittarius Labs."
readme = "README.md"
authors = [{ name = "Vikas Patel", email = "your-email@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
vision = ["opencv-python>=4.7.0", "numpy>=1.24.0"]
speech = ["SpeechRecognition>=3.10.0", "pyttsx3>=2.90", "gtts>=2.3.0", "pygame>=2.4.0"]
whisper = ["openai-whisper", "openai", "numpy"]
full = [
    "opencv-python>=4.7.0", 
    "numpy>=1.24.0",
    "SpeechRecognition>=3.10.0", 
    "pyttsx3>=2.90", 
    "gtts>=2.3.0", 
    "pygame>=2.4.0",
    "openai-whisper"
]

[project.urls]
Homepage = "https://sagittarius-labs.pages.dev/"
Repository = "https://github.com/VikasPatel22/wizardenv"

[tool.setuptools]
py-modules = ["wizardai"]
