[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "wizardenv"
version         = "2.1.3"
description     = "All-in-one AI SDK — conversational AI, computer vision, speech I/O, memory management, and a plugin system in a single file. Powered by the Sagittarius Labs API."
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"
authors         = [
    { name = "WizardAI Contributors" }
]
keywords        = [
    "ai", "sdk", "llm", "conversational-ai", "computer-vision",
    "speech-recognition", "tts", "plugin", "sagittarius-labs"
]
classifiers     = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies    = [
    "requests>=2.28.0",
]

[project.urls]
Homepage      = "https://sagittarius-labs.pages.dev/"
Repository    = "https://github.com/VikasPatel22/wizardenv"
Documentation = "https://github.com/VikasPatel22/wizardenv/blob/main/README.md"
"Bug Tracker" = "https://github.com/VikasPatel22/wizardenv/issues"

[project.optional-dependencies]
vision  = [
    "opencv-python>=4.7.0",
    "numpy>=1.24.0",
]
speech  = [
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "gtts>=2.3.0",
    "pygame>=2.4.0",
]
whisper = [
    "openai-whisper>=20230918",
    "numpy>=1.24.0",
]
full    = [
    "opencv-python>=4.7.0",
    "numpy>=1.24.0",
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "gtts>=2.3.0",
    "pygame>=2.4.0",
    "openai-whisper>=20230918",
]
dev     = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "build>=0.10",
    "twine>=4.0",
]

[tool.setuptools]
py-modules = ["wizardai"]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length    = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
